@@ -1,3 +1,4 @@
+* Archive products removed from the shop instead of deleting them
 * Do not update empty product description
 * Remove support for Python 3.8
 * Add support for Python 3.13
